@@ -25,6 +25,7 @@ import java.net.ServerSocket;
 import java.net.UnknownHostException;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -343,8 +344,9 @@ public class KubePodProcessIntegrationTest {
         files,
         entrypoint,
         DEFAULT_RESOURCE_REQUIREMENTS,
-        Map.of(),
-        Map.of());
+        Collections.emptyMap(),
+        Collections.emptyMap(),
+        Collections.emptyMap());
   }
 
   private static Set<Integer> getOpenPorts(final int count) {
